# CactusStudy

./: README.md  Schema.txt  Schema.txt.bak
backend/: card_example.json  createcard-ex.json  createdeck-ex.json  getcard-ex.json  getdeck.json  racketserver.rkt  racketserver.rkt~  setlist_example.json  studyset_example.json
backend/cactus/migrations/2023-02-11-165231_data/: down.sql
backend/cactus/src/: lib.rs  models.rs  schema.rs
backend/cactus/src/db/: mod.rs  models.rs  routes.rs
backendPython/app/: api.py
cactus/: .env  Cargo.toml  Cargo.toml.bak  Notes.txt  cactus_data.sqlite
cactus/migrations/2023-02-11-165231_data/: up.sql
cactus/src/: lib.rs  schema.rs
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/public/style/: style.css
frontend/src/: App.js  Cactus.js  Card.js  CardCarousel.js  CardSetView.js  Login.js  NavBar.js  NewCard.js  NewSet.js  Review.js  SearchSets.js  SeeSet.js  Signup.js  index.js
frontend/style/: style.css
