[package]
name = "cactus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.0", features = ["sqlite"] }
dotenvy = "0.15"
actix-web = "3.0"
actix-rt = "1.0"
listenfd = "0.3"
serde = "1.0"